# goat_spittin_interpreter

./: README.md  app.py  pyproject.toml
