[tool.poetry]
name = "goat_spittin_interpreter"
version = "0.1.0"
description = "Just a goat spittin\""
authors = ["Alex Kiura <kiuraalex@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
